--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Radio Towers</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <meta charset="UTF-8" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Quicksand:wght@600&display=swap"
