--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
             <div class="feature-content">
               <h2>Connect With Distant Friends</h2>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                a sem vel urna vulputate interdum in eget sem. Pellentesque
-                pharetra.
+                Sample message
               </p>
             </div>
           </div>
@@ -55,10 +53,7 @@
             <div class="feature-content">
               <h2>Largest Variety</h2>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
-                eget nisl a eros volutpat mollis. Sed condimentum tortor lacus,
-                nec ultrices neque ultrices ac. Nulla sodales mauris at tempus
-                commodo.
+                Sample message
               </p>
             </div>
           </div>
@@ -68,9 +63,7 @@
             <div class="feature-content">
               <h2>Connect With Distant Friends</h2>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                a sem vel urna vulputate interdum in eget sem. Pellentesque
-                pharetra.
+                Sample message
               </p>
             </div>
           </div>
@@ -90,28 +83,19 @@
           <div class="option">
             <span>Entry Level</span>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Morbi
-              blandit cursus risus at ultrices. Libero id faucibus nisl
-              tincidunt.
+              Sample message
             </p>
           </div>
           <div class="option">
             <span>Mid-Tier</span>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Morbi
-              blandit cursus risus at ultrices. Libero id faucibus nisl
-              tincidunt.
+              Sample message
             </p>
           </div>
           <div class="option">
             <span>High-End</span>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Morbi
-              blandit cursus risus at ultrices. Libero id faucibus nisl
-              tincidunt.
+              Sample message
             </p>
           </div>
         </section>
