--- a/index.html
+++ b/index.html
@@ -57,16 +57,6 @@
               </p>
             </div>
           </div>
-          <div class="feature">
-            <div class="icon-container">
-            </div>
-            <div class="feature-content">
-              <h2>Connect With Distant Friends</h2>
-              <p>
-                Sample message
-              </p>
-            </div>
-          </div>
         </section>
         <section id="video-container">
           <iframe
@@ -81,19 +71,19 @@
         </section>
         <section id="pricing">
           <div class="option">
-            <span>Entry Level</span>
+            <span><Strong>Entry Level</Strong></span>
             <p>
               Sample message
             </p>
           </div>
           <div class="option">
-            <span>Mid-Tier</span>
+            <span><strong>Mid-Tier</strong></span>
             <p>
               Sample message
             </p>
           </div>
           <div class="option">
-            <span>High-End</span>
+            <span><strong>High-End</strong></span>
             <p>
               Sample message
             </p>
