--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="feature-content">
               <h2>Connect With Distant Friends</h2>
               <p>
-                Sample message
+                Radio towers can extend internet coverage to remote locations, overcoming geographical limitations.
               </p>
             </div>
           </div>
@@ -53,7 +53,7 @@
             <div class="feature-content">
               <h2>Largest Variety</h2>
               <p>
-                Sample message
+                There are three primary tower types: mast, lattice and pole systems, that are typically oriented to the construction of today's cell and microwave antennas. These systems are some of the largest man-made structures on the planet and today's communications, broadcast and power systems could not effectively operate without them.
               </p>
             </div>
           </div>
@@ -73,19 +73,19 @@
           <div class="option">
             <span><Strong>Entry Level</Strong></span>
             <p>
-              Sample message
+              $1100
             </p>
           </div>
           <div class="option">
             <span><strong>Mid-Tier</strong></span>
             <p>
-              Sample message
+              $2100
             </p>
           </div>
           <div class="option">
             <span><strong>High-End</strong></span>
             <p>
-              Sample message
+              $4600
             </p>
           </div>
         </section>
